<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2011 - 2012 Adrian Vielsack, Christof Urbaczek, Florian Rosenthal, Michael Hoff, Moritz Lüdecke, Philip Flohr.
  
  This file is part of Sudowars.
  
  Sudowars is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
  
  Sudowars is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  
  You should have received a copy of the GNU General Public License
  along with Sudowars.  If not, see <http://www.gnu.org/licenses/>.
  
  Contributors:
  initial API and implementation:
  Adrian Vielsack
  Christof Urbaczek
  Florian Rosenthal
  Michael Hoff
  Moritz Lüdecke
  Philip Flohr
  -->
<resources>
    
    <string name="app_name">Sudowars</string>
    <string name="app_version_name">1.2 alpha</string>
    
    <!-- Debug (not really used) -->
    <string name="bluetooth_devices_paired">Paired</string>
    <string name="background">Background</string>
    <string name="manual_image">Manual Image</string>
    
    <!-- etc -->
    <string name="assistants">Assistants</string>
    <string name="bluetooth_connection_status">Connection Status</string>
    <string name="bluetooth_devices">Bluetooth Devices</string>
    <string name="get_ready">Get Ready!</string>
    <string name="give_up">Give Up</string>
    <string name="manual">Manual</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="pause">Pause</string>
    <string name="unknown">Unknown</string>
    <string name="scanning">Scanning…</string>
    <string name="settings">Settings</string>
    <string name="singleplayer">Singleplayer</string>
    <string name="warning">Warning</string>
    <string name="version">version</string>
    
    <!-- About -->
    <string name="about_title">About</string>
    <string name="about_version_title">Version</string>
    <string name="about_version_summary">@string/app_version_name</string>
    <string name="about_license_title">License</string>
    <string name="about_license_summary">GNU General Public License v3</string>
    <string name="about_website_title">Website</string>
    <string name="about_website_summary"><a href="http://sudowars.org">http://sudowars.org</a></string>
    <string name="about_developers_title">Developer</string>
    <string name="about_developers_summary">Adrian Vielsack, Christof Urbaczek, Florian Rosenthal, Michael Hoff, Moritz Lüdecke and Philip Flohr</string>
    <string name="about_thanks_title">Thanks To</string>
    <string name="about_thanks_summary">Faenza Icon Theme, HoloKen and OpenSudoku</string>
    <string name="about_changelog_title">Changelog</string>
    <string name="about_changelog_summary">
        v1.1\n   * Add Holo Theme support\n
                 * Add "Back to First Error" feature\n
                 * Add new manual\n
                 * Some code refactoring\n
                 * Many minor bugs fixed
        \nv1.0\n * First release
    </string>
    
    <!-- Menu -->
    <string name="menu_playtime">Playtime</string>
    <string name="menu_score_local">Own points</string>
    <string name="menu_score_remote">Opponent points</string>
    
    <!-- Buttons -->
    <string name="button_about">About</string>
    <string name="button_assistant">Assistant</string>
    <string name="button_ban">Ban User</string>
    <string name="button_bluetooth_activate">Activate Bluetooth</string>
    <string name="button_bluetooth_make_visible">Make device visible</string>
    <string name="button_bluetooth_make_visible_active">Show remaining seconds</string>
    <string name="button_bluetooth_is_visible_before">The device is still</string>
    <string name="button_bluetooth_is_visible_after">seconds visible.</string>
    <string name="button_bluetooth_scan">Scan</string>
    <string name="button_bluetooth_scan_stop">Stop scanning</string>
    <string name="button_bookmark_get">Open Bookmark</string>
    <string name="button_bookmark_set">Set Bookmark</string>
    <string name="button_clear">CLR</string>
    <string name="button_exit">Exit</string>
    <string name="button_give_up">Give Up</string>
    <string name="button_invert">INV</string>
    <string name="button_manual">Manual</string>
    <string name="button_kick">Kick User</string>
    <string name="button_multiplayer">Multiplayer</string>
    <string name="button_multiplayer_continue">Continue</string>
    <string name="button_multiplayer_continue_symbol">↷</string>
    <string name="button_multiplayer_new">New Game</string>
    <string name="button_next">next</string>
    <string name="button_no">No</string>
    <string name="button_ok">OK</string>
    <string name="button_pause">Pause</string>
    <string name="button_ready_local">Ready</string>
    <string name="button_ready_remote">Rival</string>
    <string name="button_redo">Redo</string>
    <string name="button_settings">Settings</string>
    <string name="button_singleplayer_continue">Continue</string>
    <string name="button_singleplayer">Singleplayer</string>
    <string name="button_singleplayer_symbol">↻</string>
    <string name="button_start">Start game</string>
    <string name="button_undo">Undo</string>
    <string name="button_yes">Yes</string>
    <string name="button_back_to_first_error">Back to first error</string>
    
    <!-- Settings -->
    <string name="settings_game_assistant_back_to_first_error">Allow return to first error</string>
    <string name="settings_game_assistant_show_mistakes">Highlight mistakes</string>
    <string name="settings_game_assistant_solve_cells">Allow cell solving</string>
    <string name="settings_game_assistant_bookmark">Allow bookmarking</string>
    <string name="settings_game_difficulty">Difficulty</string>
    <string name="settings_game_field_size">Field size</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_notifications_text">Show notifications during game</string>
    <string name="settings_show_zoom_buttons">Zoom buttons</string>
    <string name="settings_show_zoom_buttons_text">Show zoom buttons for the sudoku field</string>
    <string name="settings_vibrator">Vibration</string>
    <string name="settings_vibrator_text">Enable vibration feedback on game events</string>
    
    
    <!-- Text messages -->
    <string name="text_aborted_multiplayer">Opponent surrendered.</string>
    <string name="text_ban">User has been banned.</string>
    <string name="text_banned">You have been banned!</string>
    <string name="text_bluetooth_could_not_connect">Could not connect to the server.</string>
    <string name="text_bluetooth_discoverable_failed">Could not make device discoverable.</string>
    <string name="text_bluetooth_not_available">No bluetooth is provided on your device. You will not be able to access any multiplayer function.</string>
    <string name="text_defeat_multiplayer">DEFEAT</string>
    <string name="text_draw_multiplayer">DRAW</string>
    <string name="text_game_over">CRACKED</string>
    <string name="text_give_up">Do you really want to give up and reveal solution?</string>
    <string name="text_kick">User has been kicked.</string>
    <string name="text_kicked">You have been kicked!</string>
    <string name="text_multiplayer_menu_cancled">Starting multiplayer game cancelled.</string>
    <string name="text_remote_left">Rival has left the game.</string>
    <string name="text_win_multiplayer">WIN</string>
    
    <!-- Notifications -->
    <string name="notification_back_to_first_error_failed">Nothing to do, you had no errors</string>
    <string name="notification_back_to_first_error_success">Reverted to your first error</string>
    <string name="notification_assistant_failed">Could not find a solution. Did you make a mistake?</string>
    <string name="notification_assistant_running">Please wait until the Assistant finished his work</string>
    <string name="notification_cell_is_already_set">Cell already set by opponent.</string>
    <string name="notification_initial_field">A set cell cannot be modified.</string>
    <string name="notification_unselected_field">Select a cell first.</string>

</resources>
