<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2011 - 2012 Adrian Vielsack, Christof Urbaczek, Florian Rosenthal, Michael Hoff, Moritz Lüdecke, Philip Flohr.
  
  This file is part of Sudowars.
  
  Sudowars is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
  
  Sudowars is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  
  You should have received a copy of the GNU General Public License
  along with Sudowars.  If not, see <http://www.gnu.org/licenses/>.
  
  Contributors:
  initial API and implementation:
  Adrian Vielsack
  Christof Urbaczek
  Florian Rosenthal
  Michael Hoff
  Moritz Lüdecke
  Philip Flohr
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/about" 
    android:orientation="vertical"
    android:layout_width="match_parent" 
    android:layout_height="match_parent"
    android:padding="8dp" >
    
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <TextView style="@style/DialogText.AboutHeading"
                  android:paddingTop="0dp"
                  android:text="@string/about_version_title"/>
        <TextView style="@style/DialogText"
                  android:text="@string/about_version_summary"/>
        
        <TextView style="@style/DialogText.AboutHeading"
                  android:text="@string/about_license_title"/>
        <TextView style="@style/DialogText"
                  android:text="@string/about_license_summary"/>
        
        <TextView style="@style/DialogText.AboutHeading"
                  android:text="@string/about_website_title"/>
        <TextView style="@style/DialogText"
                  android:text="@string/about_website_summary"/>
        
        <TextView style="@style/DialogText.AboutHeading"
                  android:text="@string/about_developers_title"/>
        <TextView style="@style/DialogText"
                  android:text="@string/about_developers_summary"/>
        
        <TextView style="@style/DialogText.AboutHeading"
                  android:text="@string/about_thanks_title"/>
        <TextView style="@style/DialogText"
                  android:text="@string/about_thanks_summary"/>
        
        <TextView style="@style/DialogText.AboutHeading"
                  android:text="@string/about_changelog_title"/>
        <TextView style="@style/DialogText"
                  android:text="@string/about_changelog_summary"/>
        
    </LinearLayout>
    
</ScrollView>