<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2011 - 2012 Adrian Vielsack, Christof Urbaczek, Florian Rosenthal, Michael Hoff, Moritz Lüdecke, Philip Flohr.
  
  This file is part of Sudowars.
  
  Sudowars is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
  
  Sudowars is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  
  You should have received a copy of the GNU General Public License
  along with Sudowars.  If not, see <http://www.gnu.org/licenses/>.
  
  Contributors:
  initial API and implementation:
  Adrian Vielsack
  Christof Urbaczek
  Florian Rosenthal
  Michael Hoff
  Moritz Lüdecke
  Philip Flohr 
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_time"
        android:title="@string/menu_playtime"
        android:showAsAction="always"
        android:actionLayout="@layout/play_time" />
    <item
        android:id="@+id/menu_score_local"
        android:title="@string/menu_score_local"
        android:showAsAction="always"
        android:actionLayout="@layout/play_score" />
    <item
        android:id="@+id/menu_score_remote"
        android:title="@string/menu_score_remote"
        android:showAsAction="always"
        android:actionLayout="@layout/play_score" />
    <item
        android:id="@+id/menu_pause"
        android:title="@string/button_pause"
        android:icon="@drawable/ic_menu_pause" />
    <item
        android:id="@+id/menu_give_up"
        android:title="@string/button_give_up"
        android:icon="@drawable/ic_menu_myplaces" />
</menu>
