<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2011 - 2012 Adrian Vielsack, Christof Urbaczek, Florian Rosenthal, Michael Hoff, Moritz Lüdecke, Philip Flohr.
  
  This file is part of Sudowars.
  
  Sudowars is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
  
  Sudowars is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  
  You should have received a copy of the GNU General Public License
  along with Sudowars.  If not, see <http://www.gnu.org/licenses/>.
  
  Contributors:
  initial API and implementation:
  Adrian Vielsack
  Christof Urbaczek
  Florian Rosenthal
  Michael Hoff
  Moritz Lüdecke
  Philip Flohr
  -->
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <ImageView
        android:id="@+id/background"
        android:contentDescription="@string/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >
        
        <LinearLayout
            android:id="@+id/layout_singleplayer"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:orientation="horizontal" >
    
            <Button
                android:id="@+id/button_singleplayer_continue"
                android:text="@string/button_singleplayer_continue"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginRight="0dp"
                android:textSize="20sp" />
    
            <Button
                android:id="@+id/button_singleplayer"
                android:text="@string/button_singleplayer_symbol"
                android:layout_weight="0"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="0dp"
                android:textSize="20sp" />
    
        </LinearLayout>
    
        <Button
            android:id="@+id/button_multiplayer"
            android:text="@string/button_multiplayer"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:textSize="20sp" />
        
        <Button
            android:id="@+id/button_manual"
            android:text="@string/button_manual"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:textSize="20sp" />
        
    </LinearLayout>
    
</merge>
